# nanikiru-api

./: .gitmodules  README.md  docker-compose.yml  request1.sh  request2.sh  sample.json
app/: Dockerfile
app/src/: CMakeLists.txt  getlabel.cpp  getlabel.hpp  main.cpp  player_impl.cpp  player_impl.hpp  schema.json  settile.cpp  settile.hpp  utils.hpp  win_prob1.cpp  win_prob1.hpp  win_prob2.cpp  win_prob2.hpp
web/: nginx.conf
